finished first identify_type test

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
+check_rpn_utilities
 *.pdf
+
+### GITHUB VIM PROJECT GITIGNORE TEMPLATE ###
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
 
 ### GITHUB C PROJECT GITIGNORE TEMPLATE ###
 # Prerequisites
